@@ -297,3 +297,6 @@ $l['userDefaultTemplate']= 'Bruker standardmal';
 $l['exportContactsWithCompanies']= 'Personer sammen med firmaer';
 $l['cmdFieldsetCompany']= 'Firmaopplysninger';
 $l['mustBeSameAddressbook']= 'Firma må være i samme adressebok som personen. Personen ble ikke lagret.';
+$l['exportContacts']= 'Personlig informasjon';
+$l['privateAddress']= 'Privatadresse';
+$l['exportContactsAsVcard']= 'Eksporter personer til vcard';
