@@ -255,6 +255,25 @@ $l['allFolders']= 'Alle mapper';
 $l['defaultEmailTemplate']='Standard e-postmal';
 $l['useAuth']="Bruk autentisering";
 $l['linkMustHavePermissionToWrite']= 'Du har ikke SKRIVE-rettigheter til dette objektet, derfor kan du ikke lenke ut denne e-posten dit.';
-
 $l['sortAddressesByMailTime']= 'Når du søker etter e-postmottagere: Vis adressene etter dato for når du sist sendte e-post til dem. (Modulen Addressbok påkrevet)';
 $l['permissionDelegated']= 'Kun lese og delegert';
+$l['showCcByDefault']='Vis CC-felt som standard';
+$l['showBccByDefault']='Vis BCC-felt som standard';
+$l['icalendarOpenEvent']='Åpne hendelse';
+$l['label']= 'Etikett';
+$l['labels']= 'Etiketter';
+$l['labelsLimit']= 'Etikettgrense overskredet. Maks. tillatte antall etiketter er %d';
+$l['saveToItem']= 'Lagre til element';
+$l['saveAttachmentTo']= 'Lagre vedlegg til disse elementene';
+$l['saveToPersonal']= 'Lagre til personlig filmappe';
+$l['thisIsSpam1']= 'Denne meldingen er vurdert til å være søppelpost (spam). Klikk';
+$l['thisIsSpam2']= 'her';
+$l['thisIsSpam3']= 'hvis du mener at meldingen IKKE er søppelpost.';
+$l['thisIsNotSpam1']= 'Klikk';
+$l['thisIsNotSpam2']= 'her';
+$l['thisIsNotSpam3']= 'hvis du mener at denne meldingen er søppelpost (spam).';
+$l['moveToSpamTitle']= 'Flytte meldingen til mappen for Søppelpost?';
+$l['moveToSpamMsg']= 'Er du sikker på at du vil klassifisere denne meldingen som søppelpost?';
+$l['moveToInboxTitle']= 'Flytt ut av mappen for søppelpost?';
+$l['moveToInboxMsg']= 'Er du sikker på at du vil fjerne søppelklassifiseringen og flytte meldingen over til innboksen din?';
+$l['fts']= 'Hele meldingen';
